Fix alignment

--- a/client/styles/main.css
+++ b/client/styles/main.css
@@ -89,7 +89,7 @@ h1 small {
 h1 small a {
   font-size: 2.2rem !important;
   line-height: 3rem;
-  margin: 0 0 0 15px;
+  margin: 0 10px 0 15px;
   vertical-align: bottom;
 }
 h2.chat-title {
